# le-stream

./: AUDIT_REPORT.md  AUDIT_SUMMARY.md  Cargo.toml  DETAILED_FINDINGS.md  README.md  TODO.md
.github/workflows/: rust.yaml
le-stream/: Cargo.toml  README.md
le-stream-derive/: Cargo.toml  README.md
le-stream-derive/src/: from_le_stream.rs  from_le_stream_tagged.rs  lib.rs  to_le_stream.rs
le-stream-derive/src/to_le_stream/: extend.rs  iterator_tokens.rs
le-stream-derive/supply-chain/: audits.toml  config.toml
le-stream/src/: consume.rs  error.rs  from_le_stream.rs  from_le_stream_tagged.rs  lib.rs  prefixed.rs  stream.rs  to_le_stream.rs  try_from_le_stream.rs
le-stream/src/from_le_stream/: alloc.rs  core.rs  heapless.rs  intx.rs  std.rs
le-stream/src/prefixed/: alloc.rs  heapless.rs  std.rs
le-stream/src/to_le_stream/: alloc.rs  core.rs  heapless.rs  intx.rs  macaddr.rs  std.rs
le-stream/src/to_le_stream/core/: option_iterator.rs
le-stream/tests/: alloc.rs  consume.rs  heapless.rs  mac_address.rs  std.rs  stream.rs  structs.rs  tagged.rs
src/: consume.rs  error.rs  from_le_bytes.rs  from_le_stream.rs  from_le_stream_tagged.rs  lib.rs  prefixed.rs  to_le_bytes.rs  to_le_stream.rs  with_size_prefix.rs
src/from_le_bytes/: impls.rs
src/from_le_stream/: core.rs  impls.rs  intx.rs  macaddr.rs  std.rs
src/from_le_stream/impls/: parse_size.rs
src/prefixed/: heapless.rs  std.rs  vec.rs
src/prefixed/heapless/: byte_sized_vec.rs  usize_vec.rs  word_sized_vec.rs
src/to_le_bytes/: impls.rs
src/to_le_bytes/impls/: container_iterator.rs  heapless_vec_iterator.rs  option_iterator.rs  size_prefix_iterator.rs
src/to_le_stream/: core.rs  heapless.rs  impls.rs  intx.rs  std.rs
src/to_le_stream/core/: option_iterator.rs
src/to_le_stream/impls/: option_iterator.rs  size_prefix_iterator.rs
src/with_size_prefix/: heapless.rs  vec.rs
src/with_size_prefix/heapless/: size.rs
src/with_size_prefix/heapless/size/: iter.rs
supply-chain/: audits.toml  config.toml
tests/: consume.rs  heapless.rs  mac_address.rs  option.rs  std.rs  structs.rs  test.rs  with_heapless.rs  without_heapless.rs
