[package]
name = "le-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.8.0", optional = true }
le-stream-derive = {git = "https://github.com/PaulmannLighting/le-stream-derive.git", optional = true}

[features]
derive = ["dep:le-stream-derive"]
