[package]
name = "le-stream"
version = "0.1.5"
description = "De-/serialize objects from/to little endian byte streams"
license = "MIT"
repository = "https://github.com/PaulmannLighting/le-stream"
keywords = ["little", "endian", "byte", "stream"]
categories = ["encoding"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.8.0", optional = true }
le-stream-derive = { version = "0.1.3", git = "https://github.com/PaulmannLighting/le-stream-derive.git", optional = true }

[features]
derive = ["dep:le-stream-derive"]