[package]
name = "le-stream"
version = "3.7.0"
description = "De-/serialize objects from/to little endian byte streams"
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PaulmannLighting/le-stream"
documentation = "https://docs.rs/le-stream"
keywords = ["little", "endian", "byte", "stream"]
categories = ["encoding"]
edition = "2024"
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.8", optional = true }
intx = { version = "0.1", optional = true }
le-stream-derive = { version = "1", optional = true }
macaddr = { version = "1.0", optional = true }
log = "0.4"

[features]
derive = ["dep:le-stream-derive"]
heapless = ["dep:heapless"]
macaddr = ["dep:macaddr"]
intx = ["dep:intx"]

[lints]
workspace = true